--- a/MeetGroups/app/src/main/res/layout/fragment_home.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_home.xml
@@ -21,12 +21,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="55dp"
         android:text="Go To Sign Up"
-        android:onClick="gotoSignUp"
         app:layout_constraintBottom_toTopOf="@+id/text_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
