--- a/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.pdm.meetgroups.view.navbar.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_journal"
+        android:name="com.pdm.meetgroups.view.navbar.JournalFragment"
+        android:label="@string/title_journal"
+        tools:layout="@layout/fragment_journal" />
 </navigation>
