--- a/MeetGroups/app/src/main/res/layout/row_post.xml
+++ b/MeetGroups/app/src/main/res/layout/row_post.xml
@@ -6,42 +6,43 @@
     app:cardCornerRadius="5sp"
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true"
-    android:layout_marginHorizontal="5sp">
-
+    android:layout_marginHorizontal="5sp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <FrameLayout
+                android:id="@+id/fl_postcard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:id="@+id/imv_post_photo"
+                    android:id="@+id/imv_postcard_photo"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:src="@drawable/ponte"
                     android:scaleType="fitXY" />
-                <TextView
-                    android:id="@+id/tv_post_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:paddingVertical="10sp"
-                    android:paddingLeft="10sp"
-                    android:text="PostTitle"
-                    android:textColor="#FFFFFF"
-                    android:textSize="22dp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tv_postcard_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:paddingVertical="10sp"
+                        android:paddingLeft="10sp"
+                        android:text="PostTitle"
+                        android:textColor="#FFFFFF"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
             </FrameLayout>
 
             <TextView
-                android:id="@+id/tv_post_description"
+                android:id="@+id/tv_postcard_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description"
                 android:textSize="15sp"
-                android:layout_below="@id/tv_post_title"
-                android:paddingLeft="10sp"
+                android:paddingStart="10sp"
                 android:paddingVertical="10sp"/>
         </LinearLayout>
 </androidx.cardview.widget.CardView>
