--- a/MeetGroups/app/src/main/res/layout/row_participant.xml
+++ b/MeetGroups/app/src/main/res/layout/row_participant.xml
@@ -7,7 +7,6 @@
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true"
     android:layout_marginHorizontal="5sp"
-    android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,16 +26,19 @@
             android:paddingLeft="20dp"
             android:layout_toRightOf="@id/imv_participant_photo"
             android:layout_centerInParent="true"
-            android:textSize="15dp"/>
+            android:textSize="15sp"/>
         <Button
             android:id="@+id/btn_participant_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
+            android:background="@null"
             android:text="-"
-            android:textSize="30sp" />
+            android:textColor="#000"
+            android:backgroundTint="#FFFFFF"
+            android:textSize="30sp"
+            style="?android:attr/borderlessButtonStyle"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
