--- a/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
@@ -86,4 +86,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signUpButton"/>
 
+    <ProgressBar
+        android:id="@+id/progressBarUp"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@id/signInButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextPasswordConfirm" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
