--- a/MeetGroups/app/src/main/res/layout/fragment_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_profile.xml
@@ -64,7 +64,7 @@
         app:layout_constraintBottom_toTopOf="@id/bioTextView"/>
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTintMode="add"
