--- a/MeetGroups/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/MeetGroups/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/title_dashboard" />
 
     <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_baseline_person_24"
+        android:title="@string/profile" />
+
+    <item
         android:id="@+id/navigation_journal"
         android:icon="@drawable/ic_journal_book_24"
         android:title="@string/title_journal" />
