--- a/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
@@ -71,20 +71,23 @@
         android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
         android:text="Registrati"
         app:layout_constraintBottom_toTopOf="@id/signInButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTextPasswordConfirm" />
+
     <Button
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
         android:text="Accedi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUpButton"/>
+        app:layout_constraintTop_toBottomOf="@id/signUpButton" />
 
     <ProgressBar
         android:id="@+id/progressBarUp"
