--- a/MeetGroups/app/src/main/res/layout/fragment_post_creation.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_post_creation.xml
@@ -74,10 +74,12 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_weight="1" />
+
         <Button
             android:id="@+id/btn_post_creation_publish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_button"
             android:text="publish" />
         <Space
             android:layout_width="0dp"
