--- a/MeetGroups/app/src/main/res/drawable/custom_border.xml
+++ b/MeetGroups/app/src/main/res/drawable/custom_border.xml
@@ -4,14 +4,14 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="10dp"/>
-            <stroke android:color="@color/design_default_color_primary" android:width="1dp"/>
+            <stroke android:color="@color/amber_500" android:width="1dp"/>
         </shape>
     </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="10dp"/>
-            <stroke android:color="@color/design_default_color_primary_dark" android:width="1dp"/>
+            <stroke android:color="@color/teal_700" android:width="1dp"/>
         </shape>
     </item>
 </selector>
