--- a/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nickname"
+        android:hint="Nickname"
         app:layout_constraintBottom_toTopOf="@id/editTextPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/roundImageView"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Edit password"
+        android:hint="Edit password"
         app:layout_constraintBottom_toTopOf="@id/editTextBio"
         app:layout_constraintEnd_toStartOf="@id/buttonEditPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,6 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
+        android:paddingHorizontal="10dp"
         android:text="ELIMINA PROFILO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
