--- a/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_sign_up.xml
@@ -72,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
+        android:paddingHorizontal="10dp"
         android:text="Registrati"
         app:layout_constraintBottom_toTopOf="@id/signInButton"
         app:layout_constraintEnd_toEndOf="parent"
