--- a/MeetGroups/app/src/main/res/values/colors.xml
+++ b/MeetGroups/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="amber_200">#FFE082</color>
     <color name="amber_500">#FFC107</color>
     <color name="amber_700">#FFA000</color>
