--- a/MeetGroups/app/src/main/res/values/themes.xml
+++ b/MeetGroups/app/src/main/res/values/themes.xml
@@ -13,5 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/assistant</item>
+        <item name="materialButtonStyle">@style/customButton</item>
+    </style>
+    <style name="customButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textStyle">bold</item>
+        <item name="android:colorButtonNormal">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowRadius">3</item>
     </style>
 </resources>
