--- a/MeetGroups/app/src/main/res/layout/activity_post_creation.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_post_creation.xml
@@ -63,7 +63,21 @@
         </RadioGroup>
     </LinearLayout>
 
-    <!-- TODO(AB): Insert images from gallery -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_post_creation_images"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:maxHeight="100dp"
+        android:maxWidth="100dp"/>
+
+    <Button
+        android:id="@+id/btn_post_creation_upload_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
+        android:layout_marginTop="10dp"
+        android:text="upload" />
 
     <LinearLayout
         android:layout_width="match_parent"
