--- a/MeetGroups/app/src/main/res/layout/activity_post_creation.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_post_creation.xml
@@ -67,9 +67,7 @@
         android:id="@+id/rv_post_creation_images"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:maxHeight="100dp"
-        android:maxWidth="100dp"/>
+        android:layout_marginTop="20dp" />
 
     <Button
         android:id="@+id/btn_post_creation_upload_image"
@@ -77,7 +75,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:layout_marginTop="10dp"
-        android:text="upload" />
+        android:text="choose images" />
 
     <LinearLayout
         android:layout_width="match_parent"
