--- a/MeetGroups/app/src/main/res/layout/row_post_image.xml
+++ b/MeetGroups/app/src/main/res/layout/row_post_image.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardCornerRadius="5sp"
     app:cardElevation="5dp"
-    android:layout_marginHorizontal="5sp">
-    <ImageView
-        android:id="@+id/row_post_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher_background"/>
-</androidx.cardview.widget.CardView>
+    android:layout_marginHorizontal="10sp"
+    android:layout_margin="5dp">
+    <androidx.cardview.widget.CardView
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true">
+        <ImageView
+            android:id="@+id/row_post_image"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop" />
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
