Connesso e debuggato ProfileFragment E EditProfile. fix model logout

--- a/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
@@ -82,7 +82,7 @@
         android:minHeight="100dp"
         android:padding="10dp"
         android:saveEnabled="false"
-        android:hint="Scrivi qui la tua bio..."
+        android:hint="@string/edit_bio_hint"
         app:layout_constraintBottom_toTopOf="@id/buttonLogout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:text="LOGOUT"
+        android:text="@string/logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonDeleteProfile"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:paddingHorizontal="10dp"
-        android:text="ELIMINA PROFILO"
+        android:text="@string/delete_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/buttonLogout"
